<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Andseries!</string>
    <string name="app_name">ANDseries</string>
    <string name="descripcion_andseries">With ANDseries have controlled the series you\'re watching and you\'ll never ask ... What episode I have to see?\nStore your series in the cloud to not lose if you switch your smartphone.\nAlways be updated with the latest in series.</string>
    <string name="acceder">Access</string>
    <string name="volver">Return</string>
    <string name="salir">Exit</string>
    <string name="mis_series">My series</string>
    <color name="fondo">#0B3861</color>
    <string name="menu">Menu</string>
    <string name="anyadir_serie">Add series</string>
    <string name="recomendaciones">Recommendations</string>
    <string name="buscar_serie">Series name</string>
    <string name="buscar">Search</string>
    <string name="buscador">Search series</string>
    <string name="guardar_cambios">Save changes</string>
    <string name="guardar">Save</string>
    <string name="titulo_serie">Series title</string>
    <string name="sinopsis">Synopsis</string>
    <string name="temporada">Season</string>
    <string name="capitulo">Chapter</string>
    <string name="carga_inicial">Performing the initial charge. Please wait..</string>
    <string name="sin_series">You have not added any series. You can do this by pressing the top button on this screen.</string>
	<string name="confirmar_salir">Are you sure you want to leave ANDseries?</string>
	<string name="si">Yes</string>
	<string name="no">No</string>
	<string name="serie_no_leida">The series has not been read correctly.</string>
	<string name="se_ha_anyadido">Was added </string>
	<string name="a_mis_series"> to \"My series\".</string>
	<string name="actualizada"> updated.</string>
	<string name="alarma">Create an alert</string>
	<string name="recomendar">Tell a friend</string>
	<string name="eliminar">Remove series</string>
	<string name="nada_seleccionado">No selection</string>
	<string name="confirma_eliminar">Are you sure you want to delete </string>
	<string name="de_su_lista"> series in your list?</string>
	<string name="serie_eliminada">Series eliminated.</string>
	<string name="asunto_recomendacion">Recommendation ANDseries</string>
	<string name="cuerpo_recomendacion">I recommend this series</string>
	<string name="sin_conexion">There is no available Internet connection. Please try again later.</string>
	<string name="desarrollado">Developed by:</string>
	<string name="opciones">Options</string>
	<string name="acerca_de">About</string>
	<string name="sonido">Sound</string>
	<string name="sonido_al_inicio">Startup sound</string>
	<string name="sonido_al_inicio_desc">Select the type of sound you want to start the application</string>
	<string name="sin_coincidencias">Not found any serie that matches the entered text.</string>
	<string name="cargando">Loading... Please, wait.</string>
	<string name="registro">Register</string>
	<string name="email">e-mail</string>
	<string name="password">Password</string>
	<string name="reescribir_password">Retype your password</string>
	<string name="registrar">Register</string>
	<string name="acceso_online">Online access</string>
	<string name="recuperando_datos">Retrieving information from the server. Thank you for your patience.</string>
	<string name="cerrar_sesion">Logout</string>
	<string name="confirmar_cerrar_sesion">Sure you want to log out of ANDseries?</string>
</resources>